# wintest

./: .gitignore  ARCHITECTURE.md  FAQ.md  LICENSE  README.md  ROADMAP.md  TODO.md  config.yaml  pyproject.toml  requirements.txt  run.py
.github/workflows/: tests.yml
desktop_ui_testing/core/: agent.py
desktop_ui_testing/reporting/: reporter.py
desktop_ui_testing/reporting/templates/: report.html
desktop_ui_testing/tasks/: runner.py  schema.py
docs/: ARCHITECTURE.md
pytests/: test_services.py  test_steps.py
scripts/: build_wheel.py
test_suites/: notepad_test_suite.yaml
tests/: notepad_test.yaml
tests/unit/: test_services.py  test_steps.py  test_variables.py
wintest/: __main__.py
wintest/config/: logging.py  settings.py  workspace.py
wintest/core/: actions.py  agent.py  app_manager.py  recovery.py  screen.py  screenshot_compare.py  vision.py
wintest/core/vision/: __init__.py  qwen25vl.py
wintest/reporting/: reporter.py
wintest/reporting/templates/: report.html
wintest/scheduler/: engine.py  pidfile.py  startup.py
wintest/steps/: __init__.py  _base.py  _registry.py  click.py  click_element.py  compare_file.py  compare_new_file.py  compare_saved_file.py  double_click.py  hotkey.py  launch_application.py  press_key.py  right_click.py  scroll.py  set_variable.py  type.py  verify.py  verify_screenshot.py  wait.py  watch_directory.py
wintest/tasks/: loader.py  pipeline_loader.py  pipeline_schema.py  runner.py  schema.py  test_suite_loader.py  test_suite_runner.py  validator.py  variables.py
wintest/ui/: cli.py  console.py  interactive.py  progress.py  templates.py
wintest/ui/web/: app.py  models.py  server.py  state.py
wintest/ui/web/frontend/: package-lock.json  package.json
wintest/ui/web/frontend/src/: App.tsx  index.css  main.tsx
wintest/ui/web/frontend/src/api/: client.ts  types.ts  ws.ts
wintest/ui/web/frontend/src/components/common/: AppPathInput.tsx  ScreenshotCompare.tsx  Toast.tsx
wintest/ui/web/frontend/src/components/layout/: AppShell.tsx  Navbar.tsx
wintest/ui/web/frontend/src/components/tasks/: StepForm.tsx  StepList.tsx  StepPicker.tsx  VariablesEditor.tsx
wintest/ui/web/frontend/src/docs/: click.ts  click_element.ts  double_click.ts  hotkey.ts  index.ts  launch_application.ts  press_key.ts  right_click.ts  scroll.ts
wintest/ui/web/frontend/src/locales/: en.json
wintest/ui/web/frontend/src/pages/: Dashboard.tsx  ExecutionViewer.tsx  Help.tsx  PipelineEditor.tsx  PipelineList.tsx  ReportList.tsx  ReportViewer.tsx  Settings.tsx  TaskEditor.tsx  TestBuilder.tsx  TestEditor.tsx  TestList.tsx  TestSuiteEditor.tsx  TestSuiteList.tsx  TestSuiteViewer.tsx  Trends.tsx
wintest/ui/web/frontend/src/stores/: executionStore.ts  pipelineStore.ts  testStore.ts  testSuiteStore.ts  themeStore.ts
wintest/ui/web/routes/: baselines.py  builder.py  execution.py  files.py  pipelines.py  reports.py  saved_apps.py  settings.py  tasks.py  test_suites.py  tests.py  ws.py
wintest/ui/web/services/: execution_service.py  pipeline_service.py  report_service.py  task_service.py  test_service.py  test_suite_service.py
