[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wintest"
version = "0.1.0b1"
description = "Automated UI testing for Windows desktop applications."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
    { name = "Justin King", email = "work.justinking@gmail.com" },
]
keywords = ["testing", "ui-testing", "windows", "desktop", "automation", "gui-testing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "Pillow>=12.0.0",
    "PyAutoGUI>=0.9.54",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "click>=8.1.0",
    "colorama>=0.4.6",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "websockets>=14.0",
    "fpdf2>=2.7.0",
    "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/justinswork/wintest"
Repository = "https://github.com/justinswork/wintest"
Issues = "https://github.com/justinswork/wintest/issues"

[project.scripts]
wintest = "wintest.ui.cli:cli"

[project.optional-dependencies]
# AI vision model support for targeting UI elements by natural-language description.
# CUDA-enabled torch must also be installed separately (see README) — torch on PyPI
# is CPU-only, and bitsandbytes requires CUDA.
ai = [
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.0",
    "bitsandbytes>=0.49.0",
    "qwen-vl-utils>=0.0.10",
    "accelerate>=0.30.0",
]
test = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["pytests"]
filterwarnings = ["ignore::pytest.PytestCollectionWarning"]

[tool.setuptools.packages.find]
include = ["wintest*"]
exclude = ["wintest.ui.web.frontend*"]

[tool.setuptools.package-data]
"wintest.ui.web" = ["frontend/dist/**/*"]
